2010-08-05  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Change: Drastic changes about svk implements.

2010-08-04  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: Easy Menu (browse, log)

	* Add: Can create patch.

2010-08-03  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: Make `svn diff' asynchrounous.

2010-08-01  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.4

2010-07-22  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Unterminated message.

	* Fix: Change mode-name.

2010-07-10  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: Complete revision by `svn log'.

	* Fix: Complete revision ignore-case.

	* Add: Merged import.

	* Add: fsvn-browse-paste-properties-to-this

2010-07-09  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Wrong fontified in fsvn-log-list-mode

	* Fix: popup to showing window

2010-06-29  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Undo problems.
	* Fix: Change keybind fsvn-process-list-toggle-show-all
	      C-c C-h -> C-c C-t

2010-06-25  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Support tree-conflict showing.

2010-06-19  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.3

2010-06-14  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: Support repository file `blame'

	* Fix: fsvn-log-list-open-revision not works for file.

2010-06-12  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: Fix, A lot of modified files make slow.

	* fsvn-logview.el (fsvn-log-sibling-mode-map):
			fsvn-log-sibling-log-this C-c l -> z l
			(fsvn-log-message-mode-map):
			fsvn-log-message-browse-this C-c j -> C-c C-m
				and bugfix

	* fsvn-parasite.el (fsvn-parasite-commit-mode-map):
			fsvn-parasite-commit-toggle-no-unlock C-c N -> C-c M-n
			fsvn-parasite-commit-toggle-keep-changelist C-c K -> C-c M-k
